# uvg-send-receive-local

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_DIFF.md  diff.md  old_diff.md  old_diff2.md  run_capture_replay.sh  run_logger_pts_override.sh  run_logger_sender_receiver.sh  run_sender_receiver.sh
examples/: capture_replay.cc  opencv_send_logger.cc  opencv_sender.cc  opencv_sender.cc.bak  simple_receiver copy.cpp  simple_receiver.cpp
updates/uvgRTP/: CHANGES.md
updates/uvgRTP/include/uvgrtp/: media_stream.hh  util.hh
updates/uvgRTP/src/: frame_queue.cc  frame_queue.hh  media_stream.cc
updates/uvgRTP/src/formats/: media.cc  media.hh
uvgRTP/customizations/: packet_capture.cpp  packet_capture_internal.hh  packet_capture_types.hh
